# kg

./: CMakeLists.txt  build.sh  lab1_v2.cpp  lab2_v2.cpp  lab3_v2.cpp  lab4_v2.cpp  lab5_v2.cpp  lab6_v2.cpp
program.app/Contents/: Info.plist
program.app/Contents/Frameworks/: libsfml-audio.2.6.2.dylib  libsfml-audio.2.6.dylib  libsfml-audio.dylib  libsfml-graphics.2.6.2.dylib  libsfml-graphics.2.6.dylib  libsfml-graphics.dylib  libsfml-network.2.6.2.dylib  libsfml-network.2.6.dylib  libsfml-network.dylib  libsfml-system.2.6.2.dylib  libsfml-system.2.6.dylib  libsfml-system.dylib  libsfml-window.2.6.2.dylib  libsfml-window.2.6.dylib  libsfml-window.dylib
program.app/Contents/MacOS/: program
shaders/: fragment.glsl  vertex.glsl
